BuildSystem: Cleanup CMake code to allow libc only installation
There was no way to just install libc which is required for stdlibc++

--- a/BAN/CMakeLists.txt
+++ b/BAN/CMakeLists.txt
@@ -9,4 +9,4 @@ add_library(ban ${BAN_SOURCES})
 banan_link_library(ban libc)
 
 banan_install_headers(ban)
-install(TARGETS ban)
+install(TARGETS ban OPTIONAL)
