--- a/userspace/Shell/CMakeLists.txt
+++ b/userspace/Shell/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(Shell ${SOURCES})
 banan_link_library(Shell ban)
 banan_link_library(Shell libc)
 
-install(TARGETS Shell)
+install(TARGETS Shell OPTIONAL)
