--- a/userspace/aoc2023/day-template/CMakeLists.txt
+++ b/userspace/aoc2023/day-template/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(aoc2023_day-template ${SOURCES})
 banan_include_headers(aoc2023_day-template ban)
 banan_link_library(aoc2023_day-template libc)
 
-install(TARGETS aoc2023_day-template)
+install(TARGETS aoc2023_day-template OPTIONAL)
