--- a/userspace/aoc2023/day18/CMakeLists.txt
+++ b/userspace/aoc2023/day18/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(aoc2023_day18 ${SOURCES})
 banan_include_headers(aoc2023_day18 ban)
 banan_link_library(aoc2023_day18 libc)
 
-install(TARGETS aoc2023_day18)
+install(TARGETS aoc2023_day18 OPTIONAL)
