--- a/userspace/aoc2023/day4/CMakeLists.txt
+++ b/userspace/aoc2023/day4/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(aoc2023_day4 ${SOURCES})
 banan_link_library(aoc2023_day4 ban)
 banan_link_library(aoc2023_day4 libc)
 
-install(TARGETS aoc2023_day4)
+install(TARGETS aoc2023_day4 OPTIONAL)
