--- a/userspace/aoc2023/full/CMakeLists.txt
+++ b/userspace/aoc2023/full/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(aoc2023_full ${SOURCES})
 banan_include_headers(aoc2023_full ban)
 banan_link_library(aoc2023_full libc)
 
-install(TARGETS aoc2023_full)
+install(TARGETS aoc2023_full OPTIONAL)
