--- a/userspace/cat-mmap/CMakeLists.txt
+++ b/userspace/cat-mmap/CMakeLists.txt
@@ -5,4 +5,4 @@ set(SOURCES
 add_executable(cat-mmap ${SOURCES})
 banan_link_library(cat-mmap libc)
 
-install(TARGETS cat-mmap)
+install(TARGETS cat-mmap OPTIONAL)
