--- a/userspace/cp/CMakeLists.txt
+++ b/userspace/cp/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(cp ${SOURCES})
 banan_include_headers(cp ban)
 banan_link_library(cp libc)
 
-install(TARGETS cp)
+install(TARGETS cp OPTIONAL)
