--- a/userspace/dhcp-client/CMakeLists.txt
+++ b/userspace/dhcp-client/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(dhcp-client ${SOURCES})
 banan_include_headers(dhcp-client ban)
 banan_link_library(dhcp-client libc)
 
-install(TARGETS dhcp-client)
+install(TARGETS dhcp-client OPTIONAL)
