--- a/userspace/getopt/CMakeLists.txt
+++ b/userspace/getopt/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(getopt ${SOURCES})
 banan_include_headers(getopt ban)
 banan_link_library(getopt libc)
 
-install(TARGETS getopt)
+install(TARGETS getopt OPTIONAL)
