--- a/userspace/http-server/CMakeLists.txt
+++ b/userspace/http-server/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(http-server ${SOURCES})
 banan_link_library(http-server ban)
 banan_link_library(http-server libc)
 
-install(TARGETS http-server)
+install(TARGETS http-server OPTIONAL)
