--- a/userspace/id/CMakeLists.txt
+++ b/userspace/id/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(id ${SOURCES})
 banan_include_headers(id ban)
 banan_link_library(id libc)
 
-install(TARGETS id)
+install(TARGETS id OPTIONAL)
