--- a/userspace/init/CMakeLists.txt
+++ b/userspace/init/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(init ${SOURCES})
 banan_include_headers(init ban)
 banan_link_library(init libc)
 
-install(TARGETS init)
+install(TARGETS init OPTIONAL)
