--- a/userspace/loadkeys/CMakeLists.txt
+++ b/userspace/loadkeys/CMakeLists.txt
@@ -5,4 +5,4 @@ set(SOURCES
 add_executable(loadkeys ${SOURCES})
 banan_link_library(loadkeys libc)
 
-install(TARGETS loadkeys)
+install(TARGETS loadkeys OPTIONAL)
