--- a/userspace/ls/CMakeLists.txt
+++ b/userspace/ls/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(ls ${SOURCES})
 banan_link_library(ls ban)
 banan_link_library(ls libc)
 
-install(TARGETS ls)
+install(TARGETS ls OPTIONAL)
