--- a/userspace/resolver/CMakeLists.txt
+++ b/userspace/resolver/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(resolver ${SOURCES})
 banan_link_library(resolver ban)
 banan_link_library(resolver libc)
 
-install(TARGETS resolver)
+install(TARGETS resolver OPTIONAL)
