--- a/userspace/rm/CMakeLists.txt
+++ b/userspace/rm/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(rm ${SOURCES})
 banan_include_headers(rm ban)
 banan_link_library(rm libc)
 
-install(TARGETS rm)
+install(TARGETS rm OPTIONAL)
