--- a/userspace/snake/CMakeLists.txt
+++ b/userspace/snake/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(snake ${SOURCES})
 banan_include_headers(snake ban)
 banan_link_library(snake libc)
 
-install(TARGETS snake)
+install(TARGETS snake OPTIONAL)
