--- a/userspace/test-framebuffer/CMakeLists.txt
+++ b/userspace/test-framebuffer/CMakeLists.txt
@@ -5,4 +5,4 @@ set(SOURCES
 add_executable(test-framebuffer ${SOURCES})
 banan_link_library(test-framebuffer libc)
 
-install(TARGETS test-framebuffer)
+install(TARGETS test-framebuffer OPTIONAL)
