--- a/userspace/test-mmap-shared/CMakeLists.txt
+++ b/userspace/test-mmap-shared/CMakeLists.txt
@@ -5,4 +5,4 @@ set(SOURCES
 add_executable(test-mmap-shared ${SOURCES})
 banan_link_library(test-mmap-shared libc)
 
-install(TARGETS test-mmap-shared)
+install(TARGETS test-mmap-shared OPTIONAL)
