--- a/userspace/test-sort/CMakeLists.txt
+++ b/userspace/test-sort/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(test-sort ${SOURCES})
 banan_include_headers(test-sort ban)
 banan_link_library(test-sort libc)
 
-install(TARGETS test-sort)
+install(TARGETS test-sort OPTIONAL)
