--- a/userspace/test/CMakeLists.txt
+++ b/userspace/test/CMakeLists.txt
@@ -5,4 +5,4 @@ set(TEST_SOURCES
 add_executable(test ${TEST_SOURCES})
 banan_link_library(test libc)
 
-install(TARGETS test)
+install(TARGETS test OPTIONAL)
