--- a/userspace/whoami/CMakeLists.txt
+++ b/userspace/whoami/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(whoami ${SOURCES})
 banan_include_headers(whoami ban)
 banan_link_library(whoami libc)
 
-install(TARGETS whoami)
+install(TARGETS whoami OPTIONAL)
