--- a/userspace/aoc2023/day12/CMakeLists.txt
+++ b/userspace/aoc2023/day12/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(aoc2023_day12 ${SOURCES})
 banan_link_library(aoc2023_day12 ban)
 banan_link_library(aoc2023_day12 libc)
 
-install(TARGETS aoc2023_day12)
+install(TARGETS aoc2023_day12 OPTIONAL)
