--- a/userspace/aoc2023/day14/CMakeLists.txt
+++ b/userspace/aoc2023/day14/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(aoc2023_day14 ${SOURCES})
 banan_include_headers(aoc2023_day14 ban)
 banan_link_library(aoc2023_day14 libc)
 
-install(TARGETS aoc2023_day14)
+install(TARGETS aoc2023_day14 OPTIONAL)
