--- a/userspace/aoc2023/day15/CMakeLists.txt
+++ b/userspace/aoc2023/day15/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(aoc2023_day15 ${SOURCES})
 banan_include_headers(aoc2023_day15 ban)
 banan_link_library(aoc2023_day15 libc)
 
-install(TARGETS aoc2023_day15)
+install(TARGETS aoc2023_day15 OPTIONAL)
