--- a/userspace/aoc2023/day16/CMakeLists.txt
+++ b/userspace/aoc2023/day16/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(aoc2023_day16 ${SOURCES})
 banan_include_headers(aoc2023_day16 ban)
 banan_link_library(aoc2023_day16 libc)
 
-install(TARGETS aoc2023_day16)
+install(TARGETS aoc2023_day16 OPTIONAL)
