--- a/userspace/aoc2023/day19/CMakeLists.txt
+++ b/userspace/aoc2023/day19/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(aoc2023_day19 ${SOURCES})
 banan_include_headers(aoc2023_day19 ban)
 banan_link_library(aoc2023_day19 libc)
 
-install(TARGETS aoc2023_day19)
+install(TARGETS aoc2023_day19 OPTIONAL)
