--- a/userspace/aoc2023/day2/CMakeLists.txt
+++ b/userspace/aoc2023/day2/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(aoc2023_day2 ${SOURCES})
 banan_include_headers(aoc2023_day2 ban)
 banan_link_library(aoc2023_day2 libc)
 
-install(TARGETS aoc2023_day2)
+install(TARGETS aoc2023_day2 OPTIONAL)
