--- a/userspace/aoc2023/day20/CMakeLists.txt
+++ b/userspace/aoc2023/day20/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(aoc2023_day20 ${SOURCES})
 banan_link_library(aoc2023_day20 ban)
 banan_link_library(aoc2023_day20 libc)
 
-install(TARGETS aoc2023_day20)
+install(TARGETS aoc2023_day20 OPTIONAL)
