--- a/userspace/aoc2023/day21/CMakeLists.txt
+++ b/userspace/aoc2023/day21/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(aoc2023_day21 ${SOURCES})
 banan_include_headers(aoc2023_day21 ban)
 banan_link_library(aoc2023_day21 libc)
 
-install(TARGETS aoc2023_day21)
+install(TARGETS aoc2023_day21 OPTIONAL)
