--- a/userspace/aoc2023/day22/CMakeLists.txt
+++ b/userspace/aoc2023/day22/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(aoc2023_day22 ${SOURCES})
 banan_include_headers(aoc2023_day22 ban)
 banan_link_library(aoc2023_day22 libc)
 
-install(TARGETS aoc2023_day22)
+install(TARGETS aoc2023_day22 OPTIONAL)
