--- a/userspace/aoc2023/day23/CMakeLists.txt
+++ b/userspace/aoc2023/day23/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(aoc2023_day23 ${SOURCES})
 banan_include_headers(aoc2023_day23 ban)
 banan_link_library(aoc2023_day23 libc)
 
-install(TARGETS aoc2023_day23)
+install(TARGETS aoc2023_day23 OPTIONAL)
