--- a/userspace/aoc2023/day25/CMakeLists.txt
+++ b/userspace/aoc2023/day25/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(aoc2023_day25 ${SOURCES})
 banan_link_library(aoc2023_day25 ban)
 banan_link_library(aoc2023_day25 libc)
 
-install(TARGETS aoc2023_day25)
+install(TARGETS aoc2023_day25 OPTIONAL)
