--- a/userspace/aoc2023/day6/CMakeLists.txt
+++ b/userspace/aoc2023/day6/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(aoc2023_day6 ${SOURCES})
 banan_include_headers(aoc2023_day6 ban)
 banan_link_library(aoc2023_day6 libc)
 
-install(TARGETS aoc2023_day6)
+install(TARGETS aoc2023_day6 OPTIONAL)
