--- a/userspace/aoc2023/day7/CMakeLists.txt
+++ b/userspace/aoc2023/day7/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(aoc2023_day7 ${SOURCES})
 banan_include_headers(aoc2023_day7 ban)
 banan_link_library(aoc2023_day7 libc)
 
-install(TARGETS aoc2023_day7)
+install(TARGETS aoc2023_day7 OPTIONAL)
