--- a/userspace/aoc2023/day9/CMakeLists.txt
+++ b/userspace/aoc2023/day9/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(aoc2023_day9 ${SOURCES})
 banan_include_headers(aoc2023_day9 ban)
 banan_link_library(aoc2023_day9 libc)
 
-install(TARGETS aoc2023_day9)
+install(TARGETS aoc2023_day9 OPTIONAL)
