sudo: Fix installation permissions
I had accudentally removed SETUID bit from sudo. This required to
elevate the permissions.

--- a/userspace/sudo/CMakeLists.txt
+++ b/userspace/sudo/CMakeLists.txt
@@ -5,4 +5,12 @@ set(SOURCES
 add_executable(sudo ${SOURCES})
 banan_link_library(sudo libc)
 
-install(TARGETS sudo OPTIONAL)
+install(
+	TARGETS sudo
+	PERMISSIONS
+		OWNER_READ OWNER_WRITE OWNER_EXECUTE
+		GROUP_READ GROUP_EXECUTE
+		WORLD_READ WORLD_EXECUTE
+		SETUID
+	OPTIONAL
+)
