Kernel: Implement basic USB Mouse
This has the same problem I described in previous commit for keyboard

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -97,6 +97,7 @@ set(KERNEL_SOURCES
 	kernel/USB/Device.cpp
 	kernel/USB/HID/HIDDriver.cpp
 	kernel/USB/HID/Keyboard.cpp
+	kernel/USB/HID/Mouse.cpp
 	kernel/USB/USBManager.cpp
 	kernel/USB/XHCI/Controller.cpp
 	kernel/USB/XHCI/Device.cpp
