Userspace: Pprogram template and loadfont mark install as optional

--- a/userspace/programs/loadfont/CMakeLists.txt
+++ b/userspace/programs/loadfont/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(loadfont ${SOURCES})
 banan_link_library(loadfont ban)
 banan_link_library(loadfont libc)
 
-install(TARGETS loadfont)
+install(TARGETS loadfont OPTIONAL)
