--- a/userspace/libraries/LibC/CMakeLists.txt
+++ b/userspace/libraries/LibC/CMakeLists.txt
@@ -36,6 +36,12 @@ set(LIBC_SOURCES
 )
 
 add_library(libc ${LIBC_SOURCES})
+target_compile_definitions(libc PRIVATE __arch=${BANAN_ARCH})
+target_compile_definitions(libc PRIVATE __enable_sse=${BANAN_ENABLE_SSE})
+if (NOT BANAN_ENABLE_SSE)
+	target_compile_options(libc PRIVATE -mno-sse -mno-sse2)
+endif ()
+
 target_compile_options(libc PRIVATE -O2 -g -Wstack-usage=512 -fno-tree-loop-distribute-patterns -fno-exceptions -nostdlib)
 target_compile_options(libc PUBLIC -Wall -Wextra -Werror -Wno-error=stack-usage=)
 
