--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -7,7 +7,9 @@ set(KERNEL_SOURCES
 	kernel/ACPI/AML/Namespace.cpp
 	kernel/ACPI/AML/Node.cpp
 	kernel/ACPI/AML/Package.cpp
+	kernel/ACPI/AML/Register.cpp
 	kernel/ACPI/AML/Scope.cpp
+	kernel/ACPI/AML/String.cpp
 	kernel/APIC.cpp
 	kernel/BootInfo.cpp
 	kernel/CPUID.cpp
