Kernel: Add more conversions for AML Integer, Register, String

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -3,10 +3,12 @@ set(KERNEL_SOURCES
 	kernel/ACPI/ACPI.cpp
 	kernel/ACPI/AML.cpp
 	kernel/ACPI/AML/Field.cpp
+	kernel/ACPI/AML/Integer.cpp
 	kernel/ACPI/AML/NamedObject.cpp
 	kernel/ACPI/AML/Namespace.cpp
 	kernel/ACPI/AML/Node.cpp
 	kernel/ACPI/AML/Package.cpp
+	kernel/ACPI/AML/Register.cpp
 	kernel/ACPI/AML/Scope.cpp
 	kernel/ACPI/AML/String.cpp
 	kernel/APIC.cpp
