LibC: Add a lot of stub implementations for different libc functions
some ports want to link against these, but they are not ever called
based on simple testing

This patch adds stubs for
- openlog
- syslog
- getrusage
- mlock
- mprotect
- getpeername
- shutdown
- tzset
- mktime

--- a/userspace/libraries/LibC/CMakeLists.txt
+++ b/userspace/libraries/LibC/CMakeLists.txt
@@ -25,12 +25,14 @@ set(LIBC_SOURCES
 	sys/banan-os.cpp
 	sys/ioctl.cpp
 	sys/mman.cpp
+	sys/resource.cpp
 	sys/select.cpp
 	sys/socket.cpp
 	sys/stat.cpp
 	sys/time.cpp
 	sys/utsname.cpp
 	sys/wait.cpp
+	syslog.cpp
 	termios.cpp
 	time.cpp
 	unistd.cpp
