BuildSystem: Cleanup cmake files

--- a/BAN/CMakeLists.txt
+++ b/BAN/CMakeLists.txt
@@ -6,7 +6,10 @@ set(BAN_SOURCES
 )
 
 add_library(ban ${BAN_SOURCES})
+target_link_options(ban PRIVATE -nolibc)
 banan_link_library(ban libc)
+
+set_target_properties(ban PROPERTIES OUTPUT_NAME libban)
 
 banan_install_headers(ban)
 install(TARGETS ban OPTIONAL)
