--- a/userspace/libraries/LibC/CMakeLists.txt
+++ b/userspace/libraries/LibC/CMakeLists.txt
@@ -76,8 +76,8 @@ banan_install_headers(objlibc)
 add_library(libc-static STATIC $<TARGET_OBJECTS:objlibc>)
 add_library(libc-shared SHARED $<TARGET_OBJECTS:objlibc>)
 
-target_link_options(libc-static PRIVATE -nolibc)
-target_link_options(libc-shared PRIVATE -nolibc)
+target_link_options(libc-static PRIVATE -nostdlib)
+target_link_options(libc-shared PRIVATE -nostdlib)
 
 install(TARGETS libc-static OPTIONAL)
 install(TARGETS libc-shared OPTIONAL)
@@ -86,6 +86,3 @@ set_target_properties(libc-static PROPERTIES OUTPUT_NAME libc)
 set_target_properties(libc-shared PROPERTIES OUTPUT_NAME libc)
 
 add_library(libc ALIAS libc-static)
-
-set(CMAKE_STATIC_LIBRARY_PREFIX "")
-set(CMAKE_SHARED_LIBRARY_PREFIX "")
