--- a/userspace/libraries/LibInput/CMakeLists.txt
+++ b/userspace/libraries/LibInput/CMakeLists.txt
@@ -4,10 +4,8 @@ set(LIBINPUT_SOURCES
 )
 
 add_library(libinput ${LIBINPUT_SOURCES})
-banan_include_headers(libinput ban)
+banan_link_library(libinput ban)
 banan_link_library(libinput libc)
 
 banan_install_headers(libinput)
 install(TARGETS libinput OPTIONAL)
-
-set(CMAKE_STATIC_LIBRARY_PREFIX "")
