--- a/userspace/programs/Terminal/CMakeLists.txt
+++ b/userspace/programs/Terminal/CMakeLists.txt
@@ -4,7 +4,7 @@ set(SOURCES
 )
 
 add_executable(Terminal ${SOURCES})
-banan_include_headers(Terminal ban)
+banan_link_library(Terminal ban)
 banan_link_library(Terminal libc)
 banan_link_library(Terminal libfont)
 banan_link_library(Terminal libgui)
