--- a/userspace/programs/WindowServer/CMakeLists.txt
+++ b/userspace/programs/WindowServer/CMakeLists.txt
@@ -6,8 +6,8 @@ set(SOURCES
 )
 
 add_executable(WindowServer ${SOURCES})
-banan_include_headers(WindowServer ban)
 banan_include_headers(WindowServer libgui)
+banan_link_library(WindowServer ban)
 banan_link_library(WindowServer libc)
 banan_link_library(WindowServer libfont)
 banan_link_library(WindowServer libimage)
