--- a/userspace/programs/init/CMakeLists.txt
+++ b/userspace/programs/init/CMakeLists.txt
@@ -4,6 +4,8 @@ set(SOURCES
 
 add_executable(init ${SOURCES})
 banan_include_headers(init ban)
-banan_link_library(init libc)
+banan_link_library(init libc-static)
+
+target_link_options(init PRIVATE -static-libgcc)
 
 install(TARGETS init OPTIONAL)
