BuildSystem: Use -O2 for all libraries
I don't know why I had not specified optimization level for libraries.
Only LibImage was using explicit -O3. LibImage doesn't need O3 anymore
as O2 seems to be around the same speed.

--- a/userspace/libraries/CMakeLists.txt
+++ b/userspace/libraries/CMakeLists.txt
@@ -19,6 +19,8 @@ foreach(library ${USERSPACE_LIBRARIES})
 		add_dependencies(libraries ${library_lower})
 		# This is to allow cmake to link when libc updates
 		target_link_options(${library_lower} PRIVATE -nolibc)
+		# Default compile options
+		target_compile_options(${library_lower} PRIVATE -g -O2)
 
 		target_compile_definitions(${library_lower} PRIVATE __enable_sse=${BANAN_ENABLE_SSE})
 		if (NOT BANAN_ENABLE_SSE)
