Userspace: Compile programs and libraries with -Wall -Wextra -Werror

--- a/userspace/programs/CMakeLists.txt
+++ b/userspace/programs/CMakeLists.txt
@@ -43,7 +43,7 @@ foreach(project ${USERSPACE_PROGRAMS})
 	# This is to allow cmake to link when libc updates
 	target_link_options(${project} PRIVATE -nolibc)
 	# Default compile options
-	target_compile_options(${project} PRIVATE -g -O2)
+	target_compile_options(${project} PRIVATE -g -O2 -Wall -Wextra -Werror)
 
 	target_compile_definitions(${project} PRIVATE __enable_sse=${BANAN_ENABLE_SSE})
 	if (NOT BANAN_ENABLE_SSE)
