Shell: rewrite the whole shell to use tokens instead of raw strings
tab completion is still running with raw strings and that has to be
fixed in the future.

--- a/userspace/programs/Shell/CMakeLists.txt
+++ b/userspace/programs/Shell/CMakeLists.txt
@@ -1,5 +1,13 @@
 set(SOURCES
 	main.cpp
+	Alias.cpp
+	Builtin.cpp
+	CommandTypes.cpp
+	Execute.cpp
+	Input.cpp
+	Lexer.cpp
+	Token.cpp
+	TokenParser.cpp
 )
 
 add_executable(Shell ${SOURCES})
